Added complete project

--- a/EasyInventory/EasyInventory.csproj
+++ b/EasyInventory/EasyInventory.csproj
@@ -196,7 +196,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="images\cart.png" />
-    <Content Include="images\user.png" />
+    <Content Include="images\shop.png" />
     <Content Include="images\user1.png" />
     <Content Include="InventoryDB.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
